--- a/core/templates/web/education.html
+++ b/core/templates/web/education.html
@@ -13,63 +13,40 @@
 {% block content %}
 
     <div class="wrapper-menu carousel-margin">
-        <div class="wrapper-son container-fluid">
-        <div class ="col-xs-2 animate-box" data-animate-effect="fadeIn">
-            <a href="#">
+        <div class="wrapper-son container-fluid" style="width:40%;">
+        <div class ="col-xs-4 animate-box" data-animate-effect="fadeIn">
+            <a href="/highschool">
                 <span class="icon">
                     <i class="icon-check"></i>
                 </span>
-                <p>ipad</p>
+                <p>初高中申请</p>
             </a>
         </div>
-        <div class ="col-xs-2 animate-box" data-animate-effect="fadeIn">
-            <a href="#">
+        <div class ="col-xs-4 animate-box" data-animate-effect="fadeIn">
+            <a href="/mxztc">
                 <span class="icon">
                     <i class="icon-book"></i>
                 </span>
-                <p>iphone</p>
+                <p>本研直通</p>
             </a>
         </div>
-        <div class ="col-xs-2 animate-box" data-animate-effect="fadeIn">
+        <div class ="col-xs-4 animate-box" data-animate-effect="fadeIn">
             <a href="#">
                 <span class="icon">
                     <i class="icon-microphone"></i>
                 </span>
-                <p>iwatch</p>
+                <p>快速本科</p>
             </a>
         </div>
-        <div class ="col-xs-2 animate-box" data-animate-effect="fadeIn">
-            <a href="#">
-                <span class="icon">
-                    <i class="icon-install"></i>
-                </span>
-                <p>itv</p>
-            </a>
+
         </div>
-        <div class ="col-xs-2 animate-box" data-animate-effect="fadeIn">
-            <a href="#">
-                <span class="icon">
-                    <i class="icon-play"></i>
-                </span>
-                <p>icar</p>
-            </a>
-        </div>
-        <div class ="col-xs-2 animate-box" data-animate-effect="fadeIn">
-            <a href="#">
-                <span class="icon">
-                    <i class="icon-facebook"></i>
-                </span>
-                <p>iass</p>
-            </a>
-        </div>
-    </div>
     </div>
 
     <div class="course-header carousel-margin">
         <img  src="/static/images/web/courseheader.png">
     </div>
 
-    <div id="hxco-features-2">
+    <div id="hxco-features-2" style="background: #ffffff;">
 		<div class="hxco-container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center hxco-heading" id="ourservice">
@@ -231,7 +208,7 @@
         </div>
     </div>
 
-    <div class="fourstep">
+    <div class="fourstep" style="background:#ffffff;">
         <div class="fourstep-div">
             <p>长远学业规划</p>
         </div>
@@ -245,7 +222,7 @@
             <p>全面咨询向导</p>
         </div>
     </div>
-    <div id="hxco-features-2" style="">
+    <div id="hxco-features-2" style="background:#ffffff;">
 		<div class="hxco-container">
             <!-- left side -->
             <div class="row">
@@ -278,7 +255,131 @@
         </div>
     </div>
 
-    <div id="hxco-features-2" >
+    <div id="hxco-features-2" style="background:#ffffff;">
+        <div class="container80">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2 text-center hxco-heading" id="ourservice">
+					<h3>恒心前途特点</h3>
+{#					<p>Dignissimos asperiores vitae velit veniam totam fuga molestias accusamus alias autem provident. Odit ab aliquam dolor eius.</p>#}
+				</div>
+                <div class="col-md-12">
+                    <div class="col-md-2 col-xs-offset-1 animate-box">
+                        <h2>Heading</h2>
+                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                    </div>
+                    <div class="col-md-2 animate-box">
+                        <h2>Heading</h2>
+                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                    </div>
+                    <div class="col-md-2 animate-box">
+                        <h2>Heading</h2>
+                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                    </div>
+                    <div class="col-md-2 animate-box">
+                        <h2>Heading</h2>
+                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                    </div>
+                    <div class="col-md-2 animate-box">
+                        <h2>Heading</h2>
+                        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <div id="hxco-features-2" style="background:#ffffff;">
+        <div class="container80 text-center">
+            <p style="overflow: hidden; text-align: center; margin:69px 0 52px">
+                <a class="title-span" id="id3" style="background: url(../../static/images/web/title1.png) no-repeat; background-size: 100% 100%">微留学</a>
+            </p>
+            <img src="/static/images/web/weiliuxue.png">
+            <p style="overflow: hidden; text-align: center; margin:69px 0 52px">
+                <a class="title-span" id="id3" style="background: url(../../static/images/web/title1.png) no-repeat; background-size: 100% 100%">定制流程</a>
+            </p>
+            <div class="process" style="width:1000px; margin:0 auto;">
+                <div class="process-div processbg1" style="z-index: 7; margin-left: 0px;">
+                    <p style="margin-bottom:5px;">01</p>
+                    <p>填写</p>
+                    <p style="margin-bottom: 30px;">表单</p>
+                    <br/>
+                </div>
+                <div class="process-div processbg2" style="z-index:6;">
+                    <p style="margin-bottom:5px;">02</p>
+                    <p>进行</p>
+                    <p>评估</p>
+                </div>
+                <div class="process-div processbg1" style="z-index:5;">
+                    <p style="margin-bottom:5px;">03</p>
+                    <p>项目</p>
+                    <p>分析</p>
+                </div>
+                <div class="process-div processbg2" style="z-index:4;">
+                    <p style="margin-bottom:5px;">04</p>
+                    <p>定制</p>
+                    <p>路线</p>
+                </div>
+                <div class="process-div processbg1" style="z-index:3;">
+                    <p style="margin-bottom:5px;">05</p>
+                    <p>确定</p>
+                    <p>行程报价</p>
+                </div>
+                <div class="process-div processbg2" style="z-index:2;">
+                    <p style="margin-bottom:5px;">06</p>
+                    <p>签订</p>
+                    <p>合同</p>
+                </div>
+                <div class="process-div processbg1" style="z-index: 1;">
+                    <p style="margin-bottom:5px;">07</p>
+                    <p>行前</p>
+                    <p>指导</p>
+                </div>
+
+            </div>
+            <p style="overflow: hidden; text-align: center; margin:69px 0 52px">
+                <a class="title-span" id="id3" style="background: url(../../static/images/web/title2.png) no-repeat; background-size: 100% 100%">本科研究生申请流程</a>
+            </p>
+            <img src="/static/images/web/benyanliucheng.png">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2 text-center hxco-heading">
+						<h2>申请学校关键因素</h2>
+					</div>
+                <div class="col-md-4 col-sm-4">
+					<div class="feature-center animate-box" data-animate-effect="fadeIn">
+						<span class="icon">
+							<i class="icon-eye"></i>
+						</span>
+						<h3>DIY申请</h3>
+						<p class="feature-p">根据用户选择的院校、专业、申请批次生成申请材料清单</p>
+                        <p class="feature-p">所有申请材料的准备周期及递送提醒</p>
+                        <p class="feature-p">院校申请进度自我管理、关键事件短信、邮件提醒</p>
+                        <p class="feature-p">申请材料制作、网申、材料递送辅导</p>
+                        <p class="feature-p">签证自助教程、签证材料模板及技巧</p>
+                        <p class="feature-p">行前准备及落地攻略，物品准备大全</p>
+					</div>
+				</div>
+                <div class="col-md-4 col-sm-4">
+					<div class="feature-center animate-box" data-animate-effect="fadeIn">
+						<span class="icon">
+							<i class="icon-eye"></i>
+						</span>
+						<h3>与各大名校合作紧密</h3>
+						<p>恒心前途深知知己知彼，百战不殆的道理，在申请的这片江湖，紧密的与各大名校合作，得到一手信息资源，更好而准确的为学生服务。</p>
+						<p><a href="#" class="btn btn-primary">Learn More</a></p>
+					</div>
+				</div>
+                <div class="col-md-4 col-sm-4">
+					<div class="feature-center animate-box" data-animate-effect="fadeIn">
+						<span class="icon">
+							<i class="icon-eye"></i>
+						</span>
+						<h3>与各大名校合作紧密</h3>
+						<p>恒心前途深知知己知彼，百战不殆的道理，在申请的这片江湖，紧密的与各大名校合作，得到一手信息资源，更好而准确的为学生服务。</p>
+						<p><a href="#" class="btn btn-primary">Learn More</a></p>
+					</div>
+				</div>
+            </div>
+
+        </div>
     </div>
 {% endblock %}
