--- a/core/templates/inc/master.html
+++ b/core/templates/inc/master.html
@@ -10,13 +10,13 @@
 	<meta name="keywords" content="" />
 
 	<link rel="stylesheet" href="/static/css/headercss/animate.css">
-    <link rel="stylesheet" href="/static/css/headercss/hengxin.css">
 	<link rel="stylesheet" href="/static/css/headercss/icomoon.css">
 	<link rel="stylesheet" href="/static/css/bootstrap.css">
 	<link rel="stylesheet" href="/static/css/headercss/magnific-popup.css">
 	<link rel="stylesheet" href="/static/css/headercss/owl.carousel.min.css">
 	<link rel="stylesheet" href="/static/css/headercss/owl.theme.default.min.css">
 	<link rel="stylesheet" href="/static/css/headercss/style.css">
+{#    <link rel="stylesheet" href="/static/css/headercss/newstyle.css">#}
     <link rel="stylesheet" href="/static/css/headercss/jquery.fancybox.min.css">
     <script src="/static/js/headerjs/jquery.min.js"></script>
     <script src="/static/js/headerjs/jquery.fancybox.min.js"></script>
@@ -50,7 +50,7 @@
 					<ul>
                         <li><a href="/" id="home">首页</a></li>
                         <li><a href="#">学历学位认证</a></li>
-                        <li><a href="/abroadeducation" id="abroad_education">留学教育咨询</a></li>
+                        <li><a href="/abroadeducation" id="abroad_education">名校直通</a></li>
                         <li><a href="/courseguide" id="course_guide">海外课程辅导</a></li>
                         <li><a href="#">海归职业规划</a></li>
                         <li><a href="#">创业贷款申请</a></li>
