后台基本完成

--- a/core/templates/backend/inclusion_tag_carousel.html
+++ b/core/templates/backend/inclusion_tag_carousel.html
@@ -9,7 +9,7 @@
 
                                 <td>{{ c.link }}</td>
                                 <td>{{ c.dimDate }}</td>
-                                <td><a class="btn btn-primary btn-xs btn-github" data-target="#edit_{{ c.id }}" data-toggle="modal" href="">修改</a>
+                                <td><a class="btn btn-primary btn-xs btn-github block" data-target="#edit_{{ c.id }}" data-toggle="modal" href="">修改</a>
                                 <div aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="edit_{{ c.id }}" class="modal fade">
                 <div role="document" class="modal-dialog" >
                     <div class="modal-content">
