--- a/core/templates/backend/inclusion_tag_content.html
+++ b/core/templates/backend/inclusion_tag_content.html
@@ -7,11 +7,9 @@
                                 <td>{{ at.type }}</td>
                                 <td>{{ at.dimDate }}</td>
                                 <td>
-                                    <div class="hidden-sm hidden-xs btn-group">
-															 <a class="btn btn-xs btn-info" href="editcontent?id={{ at.id }}" draggable="false" ><i class="ace-icon fa fa-pencil bigger-120"></i></a>
+															 <a class="btn btn-primary btn-xs btn-github block" href="editcontent?id={{ at.id }}" draggable="false" >修改</a>
 
 
-														</div>
 
 
 
