--- a/core/templates/backend/index.html
+++ b/core/templates/backend/index.html
@@ -28,7 +28,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="/admin/content">
+                    <a href="/r/content">
                         <div class="panel-footer">
                             <span class="pull-left">更多..</span>
                             <span class="pull-right"><i class="glyphicon glyphicon-menu-right"></i></span>
@@ -50,7 +50,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="/admin/app">
+                    <a href="/r/gallery">
                         <div class="panel-footer">
                             <span class="pull-left">更多..</span>
                             <span class="pull-right"><i class="glyphicon glyphicon-menu-right"></i></span>
@@ -72,7 +72,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="/admin/cpn">
+                    <a href="/r/carousel">
                         <div class="panel-footer">
                             <span class="pull-left">更多..</span>
                             <span class="pull-right"><i class="glyphicon glyphicon-menu-right"></i></span>
@@ -94,7 +94,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="/admin/userinfo">
+                    <a href="/r/userinfo">
                         <div class="panel-footer">
                             <span class="pull-left">更多..</span>
                             <span class="pull-right"><i class="glyphicon glyphicon-menu-right"></i></span>
