--- a/core/templates/inc/master.html
+++ b/core/templates/inc/master.html
@@ -50,28 +50,23 @@
 					<ul>
                         <li><a href="/" id="home">首页</a></li>
                         <li><a href="#">学历学位认证</a></li>
-                        <li><a href="/abroadeducation" id="abroad_education">名校直通</a></li>
-                        <li><a href="/courseguide" id="course_guide">海外课程辅导</a></li>
-                        <li><a href="#">海归职业规划</a></li>
-                        <li><a href="#">创业贷款申请</a></li>
-                        <li><a href="#">工作签证申请</a></li>
-						<li class="has-dropdown">
-							<a href="#">行业资讯</a>
-							<ul class="dropdown">
-								<li><a href="#">我</a></li>
-								<li><a href="#">是</a></li>
-								<li><a href="#">吴</a></li>
-								<li><a href="#">浩</a></li>
-							</ul>
-						</li>
                         <li class="has-dropdown">
-							<a href="#">关于我们</a>
-							<ul class="dropdown">
-								<li><a href="#">我</a></li>
-								<li><a href="#">是</a></li>
-								<li><a href="#">吴</a></li>
-								<li><a href="#">浩</a></li>
-							</ul>
+                            <a href="/abroadeducation" id="abroad_education">名校直通</a>
+                            <ul class="dropdown">
+                                <li><a href="/highschool">初高中申请</a></li>
+								<li><a href="/mxztc">本研直通</a></li>
+								<li><a href="/ksbk">快速本科</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="/courseguide" id="course_guide">海外课程辅导</a></li>
+                        <li><a href="/zygh">海归职业规划</a></li>
+                        <li><a href="#">创业贷款申请</a></li>
+                        <li><a href="#">移民落户咨询</a></li>
+						<li>
+							<a href="/information" id="information">行业资讯</a>
+						</li>
+                        <li>
+							<a href="/aboutus" id="about_us">关于我们</a>
 						</li>
 					</ul>
 				</div>
