--- a/core/templates/web/education.html
+++ b/core/templates/web/education.html
@@ -31,7 +31,7 @@
             </a>
         </div>
         <div class ="col-xs-4 animate-box" data-animate-effect="fadeIn">
-            <a href="#">
+            <a href="/ksbk">
                 <span class="icon">
                     <i class="icon-microphone"></i>
                 </span>
