--- a/core/templates/backend/user.html
+++ b/core/templates/backend/user.html
@@ -9,7 +9,7 @@
         <div class="breadcrumbs" id="breadcrumbs">
             <ul class="breadcrumb">
                 <li><i class="icon-sitemap"></i><a href="/r">系统管理</a></li>
-                <li class="active">轮播管理</li>
+                <li class="active">用户管理</li>
             </ul><!-- .breadcrumb -->
             <div id="nav-search" class="nav-search">
                 <form class="form-search">
