--- a/core/static/css/headercss/style.css
+++ b/core/static/css/headercss/style.css
@@ -1,4 +1,17 @@
 @font-face {
+  font-family:'jianjiashu';
+  src: url("../../font/简家书.TTF");
+}
+@font-face {
+  font-family:'jianping';
+  src: url("../../font/简平黑.TTF");
+}
+@font-face {
+  font-family:'jianheiti';
+  src: url("../../font/简黑体.TTF");
+}
+
+@font-face {
   font-family: 'icomoon';
   src: url("../../fonts/icomoon.eot?srf3rx");
   src: url("../../fonts/icomoon.eot?srf3rx#iefix") format("embedded-opentype"), url("../../fonts/icomoon.ttf?srf3rx") format("truetype"), url("../../fonts/icomoon.woff?srf3rx") format("woff"), url("../../fonts/icomoon.svg?srf3rx#icomoon") format("svg");
@@ -11,9 +24,9 @@
 *
 * ======================================================= */
 body {
-  font-family: "Work Sans", Arial, sans-serif;
+  /*font-family: "Work Sans", Arial, sans-serif;*/
   font-weight: 400;
-  font-size: 16px;
+  font-family: arial,"jianjiashu";
   line-height: 1.7;
   color: #828282;
   background: #fff;
@@ -53,7 +66,7 @@ a {
   transition: 0.5s;
 }
 a:hover, a:active, a:focus {
-  color: #ffffff !important;
+  color: #ffffff;
   outline: none;
   text-decoration: none;
 }
@@ -69,7 +82,7 @@ p {
 
 h1, h2, h3, h4, h5, h6, figure {
   color: #000;
-  font-family: "Work Sans", Arial, sans-serif;
+  font-family: "jianjiashu", Arial, sans-serif;
   font-weight: 400;
   margin: 0 0 20px 0;
 }
@@ -606,6 +619,61 @@ form label {
   clear: both;
 }
 
+/*.function-summary:hover{*/
+    /*!*box-shadow: 0 14px 20px -9px rgba(0, 0, 0, 0.75);*!*/
+    /*margin-top: -20px;*/
+    /*transform: rotateY(3deg);*/
+    /*-ms-transform: rotateY(3deg);;*/
+/*}*/
+
+.function-title{
+  font-family: "Roboto";
+  margin-bottom: 2em;
+}
+.function-title h4{
+  font-family: "Roboto";
+  font-size:24px;
+  letter-spacing: 0.5px;
+  line-height: 36px;
+  color:#333 !important;
+}
+.feature-title {
+  padding-bottom: 1em;
+  margin-bottom: 1em;
+}
+.feature-title:after {
+  position: absolute;
+  content: '';
+  /*bottom: 0;*/
+  left: 50%;
+  width: 100px;
+  margin-left: -50px;
+  height: 2px;
+  background: #4cc1bd;
+  background: -moz-linear-gradient(-45deg, #4cc1bd 0%, #3f95ea 100%);
+  /*background: -webkit-gradient(left top, right bottom, color-stop(0%, #4cc1bd), color-stop(100%, #3f95ea));*/
+  background: -webkit-linear-gradient(-45deg, #4cc1bd 0%, #3f95ea 100%);
+  background: -o-linear-gradient(-45deg, #4cc1bd 0%, #3f95ea 100%);
+  background: -ms-linear-gradient(-45deg, #4cc1bd 0%, #3f95ea 100%);
+  background: linear-gradient(135deg, #4cc1bd 0%, #3f95ea 100%);
+}
+.feature-title h3 {
+  font-size: 28px;
+  letter-spacing: 0.5px;
+  position: relative;
+  line-height: 36px;
+  color:#333;
+  font-family: "jianjiashu",sans-serif;
+}
+
+.feature-title h4 {
+  font-size: 15px;
+  /*letter-spacing: 0.5px;*/
+  position: relative;
+  /*line-height: 36px;*/
+  color:#333;
+}
+
 #hxco-footer{
   padding: 4em 0;
   clear: both;
@@ -654,13 +722,16 @@ form label {
     margin-bottom: 50px;
   }
 }
+
 .feature-center .icon {
   width: 90px;
   height: 90px;
   background: #efefef;
+  /*background: rgba(0, 0, 0, 0.04) none repeat scroll 0 0;*/
   display: table;
   text-align: center;
   margin: 0 auto 30px auto;
+  transition: all 0.3s ease 0s;
   -webkit-border-radius: 50%;
   -moz-border-radius: 50%;
   -ms-border-radius: 50%;
@@ -674,18 +745,34 @@ form label {
   line-height: 40px;
   color: #52d3aa;
 }
+
+.feature-center:hover .icon{
+    background: #52d3aa none repeat scroll 0 0;
+}
+.feature-center:hover .icon i{
+    color:#FFFFFF;
+}
+
 .feature-p{
   margin-bottom:5px !important;
 
 }
 
 .feature-center p, .feature-center h3 {
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 .feature-center h3 {
   text-transform: uppercase;
   font-size: 18px;
-  color: #5d5d5d;
+  color: #333;
+  font-weight:500;
+  font-family: 'jianheiti', Tahoma, Helvetica, Arial, sans-serif;
+}
+.feature-center p{
+  font-size: 13px;
+  font-family: "jianheiti",sans-serif;
+  font-weight: 400;
+  color:#6f6f6f;
 }
 
 .feature-left {
@@ -1521,8 +1608,8 @@ form label {
 /*}*/
 
 .testimony-slide img:hover{
-  /*transform:rotate(20deg);*/
-  margin-top: -20px;
+  /*transform:rotateX(30deg);*/
+  margin-top: -30px;
   /*box-shadow: 0 14px 20px -9px rgba(0, 0, 0, 0.75);*/
 
 }
